final fixes(smooth scroll, link outline, can't scroll burger menu on mobile)

--- a/styles/scss/footer.scss
+++ b/styles/scss/footer.scss
@@ -1,12 +1,7 @@
 .section-footer {
   & .section-inner {
-    //padding-top: 30px;
-    //padding-bottom: 130px;
     display: flex;
     flex-direction: column;
-    &--map {
-      //height: 335px;
-    }
     &--info {
       color: #ffffff;
       background-color: #222222;
